overlays/dev/locust.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-master
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: locust-master
  template:
    metadata:
      labels:
        app: locust-master
    spec:
      containers:
      - name: locust
        image: locustio/locust:2.15.0
        args: ["--master"]
        ports:
        - containerPort: 8089
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: locust-worker
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: locust-worker
  template:
    metadata:
      labels:
        app: locust-worker
    spec:
      containers:
      - name: locust
        image: locustio/locust:2.15.0
        args: ["--worker", "--master-host=locust-master"]
---
apiVersion: v1
kind: Service
metadata:
  name: locust-master
  namespace: dev
spec:
  selector:
    app: locust-master
  ports:
    - protocol: TCP
      port: 8089
      targetPort: 8089
  type: ClusterIP
